test/asm/divzero-section-bank.asm
SECTION "sec", ROMX[$/0]
